@@ -30,7 +30,9 @@ class RFile : public Pawn {
 
     RDirNode* dir;
 
+    time_t removed_timestamp;
     bool forced_removal;
+    bool removing;
     bool expired;
 
     float fade_start;
@@ -67,7 +69,7 @@ public:
 
     float getAlpha() const;
 
-    void touch(const vec3 & colour);
+    void touch(time_t touch_timestamp, const vec3& colour);
 
     void setSelected(bool selected);
 
@@ -83,7 +85,8 @@ public:
     void logic(float dt);
     void draw(float dt);
 
-    void remove(bool force=false);
+    void remove(time_t removed_timestamp);
+    void remove();
 
     vec2 getAbsolutePos() const;
 
